--- a/Projeto-keanuflix/Style/style.css
+++ b/Projeto-keanuflix/Style/style.css
@@ -45,7 +45,7 @@ header nav a:hover{
 
 .filme-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url("/Projeto-keanuflix/img/img-matrix-ressu.jpg");
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url("/img/img-matrix-ressu.jpg");
 
     height: 500px;
     background-size: cover;
